# unifai-sdk-rs

./: Cargo.toml  LICENSE  README.md
examples/: echo_toolkit.rs  openai_agent.rs
src/: constants.rs  lib.rs  utils.rs
src/toolkit/: action.rs  context.rs  errors.rs  messages.rs  mod.rs  service.rs
src/tools/: call_tool.rs  mod.rs  search_tools.rs
tests/: toolkit.rs  tools.rs
