[package]
name = "unifai-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
rig-core = { git = "https://github.com/s6nqou/rig.git", rev = "83df70d13050606ad3549c5b7d5e04097f323908" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
