[package]
name = "unifai-sdk"
version = "0.1.0"
edition = "2021"
description = "The Rust SDK for Unifai, an AI native platform for dynamic tools and agent to agent communication."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/unifai-network/unifai-sdk-rs"

[dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
rig-core = "0.9.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
